GNOME Bugzilla – Bug 780879
local-display-factory: add missing comma to fix user switching
Last modified: 2017-04-03 17:39:07 UTC
commit 4b47633b36a22195e7976a8e597862eff695ca86 refactored some code and inadvertently dropped an important comma, which broke user switching. This commit reintroduces the comma.
Created attachment 349195 [details] [review] local-display-factory: add missing comma to fix user switching
Attachment 349195 [details] pushed as 60447f2 - local-display-factory: add missing comma to fix user switching