local-display-factory: add missing comma to fix user switching

commit 4b47633b36a22195e7976a8e597862eff695ca86 refactored some code
and inadvertently dropped an important comma, which broke user
switching.

This commit reintroduces the comma.

https://bugzilla.gnome.org/show_bug.cgi?id=780879